--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script>
+      window.grumi = {
+        key: '275f7111-2d04-458d-b278-d92922841cd7',
+      };
+    </script>
   </head>
   <body>
     <div id="root"></div>
