--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
         key: '275f7111-2d04-458d-b278-d92922841cd7',
       };
     </script>
+    <script id="pubmatic-script" src="//ads.pubmatic.com/AdServer/js/pwt/159369/2845/pwt.js" async></script>
+    <script id="amazon-script" src="//c.amazon-adsystem.com/aax2/apstag.js" async></script>
+    <script id="ga4-script" src="https://www.googletagmanager.com/gtag/js?id=G-3GEGY1QV1W" async></script>
+    <script id="ua-script" src="https://www.google-analytics.com/analytics.js" async></script>
+    <script
+      id="geoedge-script"
+      src="//rumcdn.geoedge.be/275f7111-2d04-458d-b278-d92922841cd7/grumi-ip.js"
+      async
+    ></script>
   </head>
   <body>
     <div id="root"></div>
